<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Earth Quake Provider</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Ruta">http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.geojson</string>
    <string name="title_activity_preference">Earthquake Preferences</string>
    <string name="AUTOREFRESH_KEY">AUTOREFRESH_KEY</string>
    <string name="INTERVAL_KEY">INTERVAL_KEY</string>
    <string name="MAG_KEY">MAG_KEY</string>
    <string name="REFRESH_INTERVAL">Autorefresh / Interval</string>
    <string name="EARTHQUAKE">Earthquake Category</string>
    <string name="CONNECTIVITY">Connectivity Category</string>
    <string name="autorefresh_pref">Autorefresh</string>
    <string name="autorefresh_title">Autorefresh switch</string>
	<string name="interval_title">Interval </string>
    <string name="magnitude_title">Magnitude </string>
    <string name="wifi">WIFI</string>
    <string name="data">Data settings</string>
    <string name="display">Display Settings </string>
    <string name="magnitude_label">"Magnitude: "</string>
    <string name="place_label">"Place: "</string>
    <string name="time_label">"Time: "</string>
    <string name="detail_label">"Detail: "</string>
    <string name="lat_label">"Latitude: "</string>
    <string name="long_label">"Longitude: "</string>
    <string name="url_label">"URL: "</string>
    <string name="refresh">Refresh</string>

</resources>
